just some small updates | syntax, design, or added files or folder

--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
+    "@7urtle/lambda": "^1.4.1",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^2.2.0",
     "sass": "^1.59.3",
     "typescript": "^4.6.4",
